[gd_scene load_steps=10 format=2]

[ext_resource path="res://image/menu/quit.png" type="Texture" id=1]
[ext_resource path="res://image/menu/som_pressed.png" type="Texture" id=2]
[ext_resource path="res://image/menu/som.png" type="Texture" id=3]
[ext_resource path="res://image/menu/start.png" type="Texture" id=4]
[ext_resource path="res://image/menu/music.png" type="Texture" id=5]
[ext_resource path="res://image/menu/start_pressed.png" type="Texture" id=6]
[ext_resource path="res://image/menu/musica_pressed.png" type="Texture" id=7]
[ext_resource path="res://image/menu/quit_pressed.png" type="Texture" id=8]
[ext_resource path="res://codes/MainMenu.gd" type="Script" id=9]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 188.0
margin_top = 44.0
margin_right = 788.0
margin_bottom = 664.0
rect_scale = Vector2( 0.2, 0.2 )
size_flags_vertical = 3
custom_constants/vseparation = 10

[node name="Start_button" type="TextureButton" parent="GridContainer"]
margin_right = 600.0
margin_bottom = 200.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )

[node name="Quit_button" type="TextureButton" parent="GridContainer"]
margin_top = 210.0
margin_right = 600.0
margin_bottom = 410.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 8 )

[node name="GridContainer" type="GridContainer" parent="GridContainer"]
margin_top = 420.0
margin_right = 600.0
margin_bottom = 620.0
size_flags_horizontal = 3
custom_constants/hseparation = 15
columns = 30

[node name="SoundMute" type="TextureButton" parent="GridContainer/GridContainer"]
margin_right = 200.0
margin_bottom = 200.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )

[node name="MusicMute" type="TextureButton" parent="GridContainer/GridContainer"]
margin_left = 215.0
margin_right = 415.0
margin_bottom = 200.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )

[connection signal="button_down" from="GridContainer/Start_button" to="." method="_on_Start_button_button_down"]
[connection signal="button_up" from="GridContainer/Start_button" to="." method="_on_Start_button_button_up"]
[connection signal="button_down" from="GridContainer/Quit_button" to="." method="_on_Quit_button_button_down"]
[connection signal="button_up" from="GridContainer/Quit_button" to="." method="_on_Quit_button_button_up"]
[connection signal="button_down" from="GridContainer/GridContainer/SoundMute" to="." method="_on_SoundMute_button_down"]
[connection signal="button_up" from="GridContainer/GridContainer/SoundMute" to="." method="_on_SoundMute_button_up"]
[connection signal="button_down" from="GridContainer/GridContainer/MusicMute" to="." method="_on_MusicMute_button_down"]
[connection signal="button_up" from="GridContainer/GridContainer/MusicMute" to="." method="_on_MusicMute_button_up"]
